tests/parser-test-files/bad-files/parse-attribute.5.error
error: Malformed repr :native attribute
  --> test:4:13
   |
 4 |  (repr :native)
   |               ^ expected a lisp type
