tests/parser-test-files/bad-files/parse-attribute.5.coal
;; BAD: Parse Attribute
(package test-package)

(repr :native)
(define-type T)
